# flwr_ml

./: .gitignore  MLflow_load_log-reg.py  README.md  testing.py
OpenFHE-final_prroject/: Note.txt  requirements2.txt  requirements3.txt  simul-commands.txt
OpenFHE-final_prroject/flwr-sklearn-logisticregression/: README.md  pyproject.toml
OpenFHE-final_prroject/flwr-sklearn-logisticregression/flwr_sklearn_logisticregression/: __init__.py  client_app.py  server_app.py  task.py
OpenFHE-final_prroject/flwr-torch-lstm/: pyproject.toml
OpenFHE-final_prroject/flwr-torch-lstm/flwr_torch_lstm/: client_app.py  server_app.py  task.py
Testing note/: CreditCard_df_3 copy.ipynb  Mutlihead_Attention.ipynb  test copy.ipynb  test.ipynb  test_fhe.ipynb
Testing note/FHE ML/Testing/: test.ipynb
fhe-flwr/flwr-torch-gru/: pyproject.toml
fhe-flwr/flwr-torch-gru/flwr_torch_gru/: __init__.py  client_app.py  server_app.py  task.py
fhe-flwr/flwr-torch-lstm/: pyproject.toml
fhe-flwr/flwr-torch-lstm/flwr_torch_lstm/: client_app.py  server_app.py  task.py
fhe-flwr/flwr-torch-multiheadattention/: README.md  pyproject.toml
fhe-flwr/flwr-torch-multiheadattention/flwr_torch_multiheadattention/: __init__.py  client_app.py  server_app.py  task.py
fhe-flwr/flwr-torch-rnn/: pyproject.toml
fhe-flwr/flwr-torch-rnn/flwr_torch_rnn/: client_app.py  server_app.py  task.py
flwr-sklearn-logisticregression/: pyproject.toml
flwr-sklearn-logisticregression/flwr_sklearn_logisticregression/: client_app.py  server_app.py  task.py
flwr-sklearn-xgboost/: README.md  pyproject.toml
flwr-sklearn-xgboost/flwr_sklearn_xgboost/: __init__.py  client_app.py  server_app.py  task.py
flwr-torch-gru/: README.md  pyproject.toml
flwr-torch-gru/flwr_torch_gru/: client_app.py  server_app.py  task.py
flwr-torch-lstm/: README.md  pyproject.toml
flwr-torch-lstm/flwr_torch_lstm/: __init__.py  client_app.py  server_app.py  task.py
flwr-torch-multiheadattention/: pyproject.toml
flwr-torch-multiheadattention/flwr_torch_multiheadattention/: client_app.py  server_app.py  task.py
flwr-torch-rnn/: README.md  pyproject.toml
flwr-torch-rnn/flwr_torch_rnn/: __init__.py  client_app.py  server_app.py  task.py
mlruns/0/: meta.yaml
mlruns/401552666814250793/: meta.yaml
mlruns/401552666814250793/0486d633e2f441c89322564eb23667de/: meta.yaml
mlruns/401552666814250793/0c14ec035960451ea16c5737dfec5ed4/: meta.yaml
mlruns/401552666814250793/0e6f33efc4f9427ba45078622426d49e/: meta.yaml
mlruns/401552666814250793/1198027fb80644fa868537faafc53a81/: meta.yaml
mlruns/401552666814250793/1898110c021d40ea8950f6de54fbdfa6/: meta.yaml
mlruns/401552666814250793/194ff29211ee46dda721216fa943f1c7/: meta.yaml
mlruns/401552666814250793/19835c4ba81b46e7a2b3bd286a8ce25d/: meta.yaml
mlruns/401552666814250793/20cb094192804890adf403a64c613dd2/: meta.yaml
mlruns/401552666814250793/24217955c7bb413689a357eadb2c20e8/: meta.yaml
mlruns/401552666814250793/2536e5958b6b4b918f73941ab333de9d/: meta.yaml
mlruns/401552666814250793/25d51ae6b77a4d5685140d9b5bfae465/: meta.yaml
mlruns/401552666814250793/26ca055562f94355a740d41dbf2b6f89/: meta.yaml
mlruns/401552666814250793/283ec31c6fc24cc2aef181069ed8e666/: meta.yaml
mlruns/401552666814250793/28aea8b50f0d476691795e4bf17ef305/: meta.yaml
mlruns/401552666814250793/28f89a83c3c54e19b1da90253d43a7bc/: meta.yaml
mlruns/401552666814250793/2fd644c86b7a4bb096df72fbafd44d56/: meta.yaml
mlruns/401552666814250793/3038b4ee46724e0c845798d2a626edb8/: meta.yaml
term/: README.md  pyproject.toml
term/term/: __init__.py  client_app.py  server_app.py  task.py
(+837 files in other folders)
