[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-sklearn-logisticregression"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "zuy"

[tool.flwr.app.components]
serverapp = "flwr_sklearn_logisticregression.server_app:app"
clientapp = "flwr_sklearn_logisticregression.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
penalty = "l2"
local-epochs = 50

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
