[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-sklearn-xgboost"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "zuy"

[tool.flwr.app.components]
serverapp = "flwr_sklearn_xgboost.server_app:app"
clientapp = "flwr_sklearn_xgboost.client_app:app"

[tool.flwr.app.config]
# ServerApp
num-server-rounds = 3
fraction-fit = 0.1
fraction-evaluate = 0.1

# ClientApp
local-epochs = 1
params.objective = "binary:logistic"
params.eta = 0.1                     # Learning rate
params.max-depth = 8
params.eval-metric = "auc"
params.nthread = 16
params.num-parallel-tree = 1
params.subsample = 1
params.tree-method = "hist"
device = "cuda"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
