[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-torch-lstm"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "zuy"

[tool.flwr.app.components]
serverapp = "flwr_torch_lstm.server_app:app"
clientapp = "flwr_torch_lstm.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 300

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
options.backend.client-resources.num-cpus = 8
# options.backend.client-resources.num-gpus = 0.5
